# logg

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/basic/: basic.cpp
example/compound/: compound.cpp
example/custom/: custom.cpp
example/location/: location.cpp
example/optimization/: optimization.cpp
include/logg/: config.h  header.h  levels.h  logg.h  source.h
src/: CMakeLists.txt  posix_header.cpp  win32_header.cpp
